examples/test/testpolicy16683.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16683
  namespace: namespace282
spec:
  podSelector:
    matchLabels:
      key9: value48
      key13: value0
      key45: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value12
          key1: value33
      podSelector:
        matchLabels:
          key40: value48
          key45: value15
          key29: value2
